# lidar_camera_calibration

./: CMakeLists.txt  Makefile  README.md  package.xml
data/point_clouds/: 0.pcd  1.pcd  2.pcd
data/result/: cloud0.pcd  cloud1.pcd  cloud2.pcd  transform.txt
data/samples/: caculate.py  calibration_handler_param.json  camera_info.json  images.txt  point_clouds.txt
examples/: SensorsCalibApp.cpp
include/sensors_calib/: CalibrationHandler.hpp  Constants.hpp  HistogramHandler.hpp  ProbabilityHandler.hpp  TypeConversions.hpp  Types.hpp  sensors_calib.hpp
include/sensors_calib/impl/: CalibrationHandler.ipp  HistogramHandler.ipp
include/sensors_calib/utils/: ParamConfig.hpp  PointCloudFilter.hpp  Utility.hpp  utils.hpp
manual_calib/: CMakeLists.txt  README.md
manual_calib/data/: center_camera-intrinsic.json  top_center_lidar-to-center_camera-extrinsic.json
manual_calib/include/: intrinsic_param.hpp  projector_lidar.hpp
manual_calib/src/: run_lidar2camera.cpp
ros1/: CMakeLists.txt  package.xml  sensors_calib_ros1.cpp
ros2/: CMakeLists.txt  sensors_calib_ros2.cpp
src/: CalibrationHandler.cpp  HistogramHandler.cpp  ParamConfig.cpp  ProbabilityHandler.cpp  Types.cpp  Utility.cpp
